Chapter 11 — Listing 11.7: AsyncErrorHandling.java Demonstrates: exceptionally, handle, and whenComplete for async error handling